--- a/apps/index.html
+++ b/apps/index.html
@@ -1,228 +1,174 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Apps – OpsOh</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>OpsOh Apps</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     name="description"
-    content="All iOS utilities by OpsOh in one place – PDF tools, photo tools, and more."
-  >
-  <link rel="stylesheet" href="/assets/css/style.css">
+    content="Browse the collection of OpsOh apps for iPhone – simple, focused utilities built for everyday tasks."
+  />
+  <link rel="stylesheet" href="../assets/css/style.css" />
 </head>
 <body>
-  <div class="site-wrapper">
-    <header>
-      <div class="header-inner">
-        <div class="brand">
-          <div class="brand-mark"></div>
-          <div class="brand-name">OpsOh</div>
-        </div>
+  <div class="page">
 
+    <!-- Top navigation -->
+    <header class="site-header">
+      <div class="site-header-inner">
+        <a href="/" class="brand">
+          <img src="../assets/img/opsoh-logo.png" alt="OpsOh" class="brand-logo" />
+          <span class="brand-name">OpsOh</span>
+        </a>
         <nav class="nav">
-          <a href="/">Home</a>
-          <a href="/apps/" class="current">Apps</a>
+          <a href="/" class="nav-link">Home</a>
+          <a href="/apps/" class="nav-link nav-link-active">Apps</a>
         </nav>
       </div>
     </header>
 
-    <main>
+    <!-- Main content -->
+    <main class="main">
+
+      <!-- Apps intro -->
       <section class="hero hero-compact">
-        <h1>OpsOh apps</h1>
-        <p class="hero-lead">
-          A growing set of small utilities for iPhone. Built for speed, privacy,
-          and getting one job done cleanly.
-        </p>
+        <div class="hero-text">
+          <h1>All OpsOh apps</h1>
+          <p class="hero-lead">
+            A growing collection of focused utilities for iPhone. No accounts, no ads –
+            just quick tools that stay out of your way.
+          </p>
+        </div>
       </section>
 
-      <section class="apps-list">
+      <!-- Apps grid -->
+      <section class="section">
+        <div class="section-header">
+          <h2>Available today</h2>
+          <p class="section-subtitle">
+            Update the links below as new versions go live in the App Store.
+          </p>
+        </div>
+
         <div class="app-grid app-grid-large">
 
-          <!-- Clean Screenshot -->
+          <!-- Example cards; update href values with real App Store links when ready -->
+
           <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/clean-screenshot.jpeg" alt="Clean Screenshot icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">Clean Screenshot</div>
-              <div class="app-tagline">
-                Remove status bars &amp; clutter from screenshots.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">CS</div>
+              <div>
+                <h3 class="app-title">Clean Screenshot</h3>
+                <p class="app-tagline">Remove status bars and clutter from screenshots.</p>
               </div>
-              <div class="app-meta">Screenshots · iPhone</div>
             </div>
-            <div class="app-link">
-              <span class="app-link-label">Coming soon</span>
+            <p class="app-meta">Screenshots · iPhone</p>
+            <div class="app-footer">
+              <span class="pill pill-soon">Coming soon</span>
             </div>
           </article>
 
-          <!-- Split Merge PDF -->
           <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/split-merge-pdf.jpg" alt="Split Merge PDF icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">Split Merge PDF</div>
-              <div class="app-tagline">
-                Split one PDF into many, or merge multiple into one.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">SM</div>
+              <div>
+                <h3 class="app-title">Split Merge PDF</h3>
+                <p class="app-tagline">Split one PDF into many, or merge several into one.</p>
               </div>
-              <div class="app-meta">PDF tools · iPhone</div>
             </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
+            <p class="app-meta">PDF tools · iPhone</p>
+            <div class="app-footer">
+              <a href="#" class="button-ghost">View on the App Store</a>
             </div>
           </article>
 
-          <!-- ScanSignPDF -->
           <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/scansignpdf.jpg" alt="ScanSignPDF icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">ScanSignPDF</div>
-              <div class="app-tagline">
-                Scan, sign, and export PDFs right on your device.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">SS</div>
+              <div>
+                <h3 class="app-title">ScanSignPDF</h3>
+                <p class="app-tagline">Scan, sign, and export PDFs in seconds.</p>
               </div>
-              <div class="app-meta">PDF tools · iPhone</div>
             </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
+            <p class="app-meta">PDF tools · iPhone</p>
+            <div class="app-footer">
+              <a href="#" class="button-ghost">View on the App Store</a>
             </div>
           </article>
 
-          <!-- Images to PDF (no icon yet) -->
           <article class="app-card">
-            <div class="app-icon app-icon-placeholder">
-              <span>PDF</span>
-            </div>
-            <div class="app-text">
-              <div class="app-name">Images to PDF</div>
-              <div class="app-tagline">
-                Turn one or more photos into a single shareable PDF.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">IP</div>
+              <div>
+                <h3 class="app-title">Images to PDF</h3>
+                <p class="app-tagline">Turn your photos into clean, shareable PDFs.</p>
               </div>
-              <div class="app-meta">Photos · iPhone</div>
             </div>
-            <div class="app-link">
-              <span class="app-link-label">Coming soon</span>
+            <p class="app-meta">Photos · iPhone</p>
+            <div class="app-footer">
+              <span class="pill pill-soon">Coming soon</span>
             </div>
           </article>
 
-          <!-- Photo HEIC to JPEG -->
           <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/heic-to-jpeg.jpg" alt="Photo HEIC to JPEG icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">Photo HEIC to JPEG</div>
-              <div class="app-tagline">
-                Convert HEIC photos to standard JPEG files.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">HJ</div>
+              <div>
+                <h3 class="app-title">Photo HEIC to JPEG</h3>
+                <p class="app-tagline">Convert HEIC photos to JPEG for easy sharing.</p>
               </div>
-              <div class="app-meta">Photos · iPhone</div>
             </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
+            <p class="app-meta">Photos · iPhone</p>
+            <div class="app-footer">
+              <a href="#" class="button-ghost">View on the App Store</a>
             </div>
           </article>
 
-          <!-- Rename Photos -->
           <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/rename-photos.jpg" alt="Rename Photos icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">Rename Photos</div>
-              <div class="app-tagline">
-                Batch-rename photos with clean, consistent filenames.
+            <div class="app-card-header">
+              <div class="app-icon-placeholder">AP</div>
+              <div>
+                <h3 class="app-title">Attachments to PDF</h3>
+                <p class="app-tagline">Turn email attachments into a single PDF.</p>
               </div>
-              <div class="app-meta">Photos · iPhone</div>
             </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
+            <p class="app-meta">Files · iPhone</p>
+            <div class="app-footer">
+              <a href="#" class="button-ghost">View on the App Store</a>
             </div>
           </article>
 
-          <!-- Attachments to PDF -->
-          <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/attachments-to-pdf.jpg" alt="Attachments to PDF icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">Attachments to PDF</div>
-              <div class="app-tagline">
-                Turn email attachments into a single PDF.
-              </div>
-              <div class="app-meta">Files · iPhone</div>
-            </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
-            </div>
-          </article>
-
-          <!-- UVSmart -->
-          <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/uvsmart.jpg" alt="UVSmart icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">UVSmart</div>
-              <div class="app-tagline">
-                Check UV levels and get simple sun-safety guidance.
-              </div>
-              <div class="app-meta">Weather · iPhone</div>
-            </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
-            </div>
-          </article>
-
-          <!-- EVSmart -->
-          <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/evsmart.jpg" alt="EVSmart icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">EVSmart</div>
-              <div class="app-tagline">
-                Quick EV range and charging helpers for everyday trips.
-              </div>
-              <div class="app-meta">EV tools · iPhone</div>
-            </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
-            </div>
-          </article>
-
-          <!-- DrinQ -->
-          <article class="app-card">
-            <div class="app-icon">
-              <img src="/assets/img/drinq.jpg" alt="DrinQ icon">
-            </div>
-            <div class="app-text">
-              <div class="app-name">DrinQ</div>
-              <div class="app-tagline">
-                Track your daily water intake with simple streaks &amp; goals.
-              </div>
-              <div class="app-meta">Health · iPhone</div>
-            </div>
-            <div class="app-link">
-              <a href="#" class="app-link-label">View</a>
-            </div>
-          </article>
+          <!-- Add more cards here as new apps ship -->
 
         </div>
       </section>
+
+      <!-- Contact on apps page as well -->
+      <section class="section">
+        <div class="section-header">
+          <h2>Need help with an app?</h2>
+          <p class="section-subtitle">
+            For support, feature ideas, or bug reports, send a quick email.
+          </p>
+        </div>
+
+        <div class="contact-card">
+          <p>
+            Email <a href="mailto:giorgio@opsoh.com">support@opsoh.com</a> with the app name and a short note.
+          </p>
+        </div>
+      </section>
+
     </main>
 
+    <!-- Footer -->
     <footer class="site-footer">
-      <div class="footer-inner">
-        <div class="footer-left">
-          © 2026 OpsOh. Small, focused tools for everyday tasks.
-        </div>
-        <div class="footer-right">
-          <a href="/">Home</a>
-          <a href="/privacy/">Privacy</a>
-        </div>
+      <div class="site-footer-inner">
+        <p>© 2026 OpsOh. Small, focused apps for everyday tasks.</p>
+        <a href="/privacy.html" class="footer-link">Privacy Policy</a>
       </div>
     </footer>
+
   </div>
 </body>
 </html>
