--- a/index.html
+++ b/index.html
@@ -161,26 +161,27 @@
             </div>
           </article>
 
-          <!-- Attachments to PDF -->
-          <article class="app-card">
-            <div class="app-card-header">
-              <img
-                src="assets/img/attachement-to-pdf.jpg"
-                alt="Attachments to PDF app icon"
-                class="app-icon"
-              />
-              <div>
-                <h3 class="app-title">Attachments to PDF</h3>
-                <p class="app-tagline">Turn email attachments into a single PDF.</p>
-              </div>
-            </div>
-            <p class="app-meta">Files · iPhone</p>
-            <div class="app-footer">
-              <a href="#" class="app-link">View</a>
-            </div>
-          </article>
+      <!-- Attachments to PDF -->
+<article class="app-card">
+  <div class="app-card-header">
+    <img
+      src="assets/img/attachments-to-pdf.jpeg"
+      alt="Attachments to PDF app icon"
+      class="app-icon"
+    />
+    <div>
+      <h3 class="app-title">Attachments to PDF</h3>
+      <p class="app-tagline">Turn email attachments into a single PDF.</p>
+    </div>
+  </div>
+  <p class="app-meta">Files · iPhone</p>
+  <div class="app-footer">
+    <a href="#" class="app-link">View</a>
+  </div>
+</article>
 
-          <!-- PhotoPDF Maker (new) -->
+
+          <!-- PhotoPDF Maker  -->
           <article class="app-card">
             <div class="app-card-header">
               <img
@@ -228,7 +229,7 @@
     <!-- Footer -->
     <footer class="site-footer">
       <div class="site-footer-inner">
-        <p>© 2026 OpsOh. Small, focused apps for everyday tasks.</p>
+        <p>© 2026 OpsOh. Custom, focused apps for everyday tasks.</p>
         <a href="https://opsoh.github.io/opsoh-privacy/" class="footer-link">Privacy Policy</a>
       </div>
     </footer>
